--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "unmar",
   "description": "A DynamoDB JSON unmarshaller utility",
+  "version": "1.1.0",
   "scripts": {
     "build": "concurrently \"npm run build:main\" \"npm run build:renderer\"",
     "build:main": "cross-env NODE_ENV=production TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.main.prod.ts",
@@ -221,6 +222,7 @@
     "react": "^17.0.2",
     "react-ace": "^9.5.0",
     "react-dom": "^17.0.2",
+    "react-resize-detector": "^7.0.0",
     "react-router-dom": "^6.2.1"
   },
   "devEngines": {
